tests/compile-fail/no_ident.rs
#[derive(darling::FromField)]
struct Input {
    ident: syn::Ident,
}

fn main() {}
