tests/compile-fail/no_ident.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/no_ident.rs:3:5
  |
3 |     ident: syn::Ident,
  |     ^^^^^
  |     |
  |     expected `&Ident`, found `&Option<Ident>`
  |     arguments to this function are incorrect
  |
  = note: expected reference `&syn::Ident`
             found reference `&Option<syn::Ident>`
note: method defined here
 --> $RUST/core/src/clone.rs
